Changing recipients add/delete operation so it returns a new summary
