# docs/openapi.yaml
@@ -180,6 +180,7 @@ paths:
           description: OK
         "404":
           description: The distribution list doesn't exists
+
     patch:
       summary: |
         Adds new users to the distribution list.
@@ -193,11 +194,14 @@ paths:
               $ref: '#/components/schemas/UserIdList'
       responses:
         "204":
-          description: |
-            Users added successfully.
+          description: Users added successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DistributionListSummary'
         "400":
-          description: |
-            The distribution list doesn't exists
+          description: The distribution list doesn't exists
+
     delete:
       summary: |
         Deletes users from the distribution list.
@@ -210,12 +214,14 @@ paths:
             schema:
               $ref: '#/components/schemas/UserIdList'
       responses:
-        "204":
-          description: |
-            Users added successfully.
+        "200":
+          description: Users deleted successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/DistributionListSummary'
         "400":
-          description: |
-            The distribution list doesn't exists
+          description: The distribution list doesn't exists
 
 components:
 
